--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ html,
 body {
     margin: 0;
     padding: 0;
+    background-color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 img {
     border-radius: 10px;
@@ -16,6 +18,7 @@ Header
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: white;
 }
 
 /*
@@ -24,11 +27,14 @@ Game
 .game {
     display: flex;
     justify-content: space-between;
+    color: white;
+    gap: 10%;
     
 }
 
 .human,
 .cpu {
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,19 +50,53 @@ Game
 
 
 .chosen{
+    
     height: 400px;
     width: auto;
 }
 .choices {
+    margin-top: 20px;
     display: flex;
+    gap: 20px;
+}
+.picked{
+    background-color: rgb(255, 255, 255);
 }
 
 .choices img{
-    height: 100px;
+    height: 200px;
     width: auto;
+    border: 2px solid white;
+}
+
+#human-choices img:hover{
+    height: 200px;
+    width: auto;
+    border: 2px solid rgb(163, 0, 0);
 }
 
 
-.anounce{ 
+.announce{ 
     text-align: center;
+    color: white;
+}
+
+button {
+    background-color:rgb(255, 255, 255); 
+    border-radius: 10px;
+    color: rgb(0, 0, 0);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 900;
+    cursor: pointer;
+    
+    transition: .2s;
+}
+
+button:hover {
+    transform: scale(1.05);
 }
