--- a/style.css
+++ b/style.css
@@ -27,8 +27,10 @@ Game
 .game {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: white;
-    gap: 10%;
+    gap: 20px;
+    flex-shrink: 1;
     
 }
 
@@ -99,4 +101,8 @@ button {
 
 button:hover {
     transform: scale(1.05);
+}
+
+.message{
+    margin-top: 20px;
 }
